WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206183
_WKResourceLoadStatisticsFirstParty should be forward declared not imported in _WKResourceLoadStatisticsThirdParty
https://bugs.webkit.org/show_bug.cgi?id=206183
Summary
_WKResourceLoadStatisticsFirstParty should be forward declared not imported i...
Kate Cheney
Reported
2020-01-13 11:00:44 PST
This will allow for a use-case where the WebKit.framework private headers directory is not included.
Attachments
Patch
(3.03 KB, patch)
2020-01-13 11:07 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-01-13 11:01:19 PST
<
rdar://problem/58535245
>
Radar WebKit Bug Importer
Comment 2
2020-01-13 11:01:22 PST
<
rdar://problem/58535247
>
Kate Cheney
Comment 3
2020-01-13 11:07:04 PST
Created
attachment 387548
[details]
Patch
Kate Cheney
Comment 4
2020-01-13 11:08:31 PST
(In reply to Radar WebKit Bug Importer from
comment #1
)
> <
rdar://problem/58535245
>
This is the correct radar.
WebKit Commit Bot
Comment 5
2020-01-13 16:39:47 PST
Comment on
attachment 387548
[details]
Patch Clearing flags on attachment: 387548 Committed
r254472
: <
https://trac.webkit.org/changeset/254472
>
WebKit Commit Bot
Comment 6
2020-01-13 16:39:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug