_WKResourceLoadStatisticsFirstParty should be forward declared not imported in _WKResourceLoadStatisticsThirdParty https://bugs.webkit.org/show_bug.cgi?id=206183 <rdar://problem/58535245>

Reviewed by Alex Christensen.

* UIProcess/API/Cocoa/_WKResourceLoadStatisticsFirstParty.h:
* UIProcess/API/Cocoa/_WKResourceLoadStatisticsThirdParty.h:
* UIProcess/API/Cocoa/_WKResourceLoadStatisticsThirdParty.mm:
The additional import statement here was unnecessary because
this file imports _WKResourceLoadStatisticsThirdPartyInternal.h
which forward declares the _WKResourceLoadStatisticsFirstParty class.


Canonical link: https://commits.webkit.org/219292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254472 268f45cc-cd09-0410-ab3c-d52691b4dbfc